packages/typ/tests/fixtures/diagnostics/0747_fcm_local_abstract_wrong_arg_09.ml.expected
File "0747_fcm_local_abstract_wrong_arg_09.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0747_fcm_local_abstract_wrong_arg_09 is not a valid module name.

File "0747_fcm_local_abstract_wrong_arg_09.ml", line 14, characters 61-65:
14 | let _ = use_iota (module M_iota : Id_iota with type t = int) true
                                                                  ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
